fix footer positioning and image resizing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,24 @@
 background-color: #8EC5FC;
 background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); */
 
+*,
+*:after,
+*:before {
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+}
 body {
-  margin: 0;
+  /* margin: 0; */
+  margin : 0px !important;
   font-family:' -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", '"Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height:100%;
+  /* width:100%; */
+  
   /* padding-bottom:60px; */
 }
 
@@ -21,21 +31,43 @@ body {
 .App {
   /* background-color:blue; */
   height: 100%;
+  margin:0;
+  width:100%;
+  padding:0;
 }
 .header {
     color:white;
     background-color:darkblue;
-    padding-top: 1.5rem;
+    padding-top: .6rem;
     padding-bottom: 1.5rem;
     text-transform:uppercase;
     font-weight:800;
-    max-height:500px;
+    width:100%;
+      /* max-height:500px; */
+    display:flex;
     
 }
+
+.headerbox{
+  justify-content:center;
+  width:100%;
+  /* background-color:pink; */
+  /* max-height:500px; */
+}
+.headcont{
+ 
+}
+
 #statusbar{
   background-color:white;
-  font-size:1.5rem;
+  font-size:1.2rem;
   color:red;
+  text-transform:uppercase;
+  border-top:3px solid darkblue;
+  border-bottom:3px solid darkblue;
+  font-weight:800;
+  margin:0;
+  /* padding:0; */
 }
 
 #mybtn{
@@ -43,8 +75,12 @@ body {
 }
 #statusbarw{
   background-color:white;
-  font-size:1.5rem;
+  font-size:1.2rem;
+  border-top:3px solid darkblue;
+  border-bottom:3px solid darkblue;
+  text-transform:uppercase;
   color:rgb(39, 216, 39);
+  font-weight:800;
 }
 #placehold{
   display:inline-block;
@@ -73,30 +109,30 @@ justify-content:center;
 background-color:gray;
 /* height:40% */
 }
+/* .fluid-container{
+  width:100%;
+} */
 
 .img-fluid {
   /* width:150px;
   height:400px;
   background-color:gray; */
-  border:3px solid blue;
+}
+.headimg{
+  width:170px;
+}
+.choicebox{
+  border:3px solid darkblue;
   box-shadow: 15px 17px 10px rgb(28, 57, 66);
   /* padding:3rem; */
-  width:60%;
+  width:45%;
   transition:.7s;
- 
 }
 
-.contimg {
-  max-width:100%;
-  max-height:200px;
-}
 .headerlogo{
 
 }
-.headerbox{
-  justify-content:center;
-  max-height:500px;
-}
+
 
 .headimg {
   /* background-image:url(./assets/img/dodgers2.png); 
@@ -120,14 +156,20 @@ background-color:gray;
   transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
 
 }
+.supcontainer{
+  /* height:100%; */
+  /* background-color:yellow; */
+  display:flex;
+  /* flex-direction: column; */
+}
 .my-container{
   /* background-color:orange;
   border:5px solid black; */
   /* max-height:80%;
   max-width: 80%; */
   padding-top:2rem;
-  margin-bottom:3rem;
-  height:500px;
+  margin-bottom:1rem;
+  /* height:100%; */
 
 }
 
@@ -147,12 +189,45 @@ background-color:gray;
   left:0;
   height:70px;
   right:0;
+  margin-top:2.2rem;
   font-size:.8rem;
-  position: absolute;
   
 }
+.yuh {
+  /* background-color:pink; */
+}
+
 
 @media (max-width:1200px){
+  .congrats {
+    width:40%;
+    /* border:3px solid pink; */
+  }
+  #midline{
+    font-size:2rem;
+    letter-spacing: .35rem;
+    line-height:2.5rem;
+    /* color:white; */
+    /* padding-top:1rem; */
+    /* color:pink; */
+  }
+  #botline{
+    /* margin-bottom:0rem; */
+  
+  
+  }
+  .headimg{
+    width:130px;
+  }
+  .headerbox{
+    line-height:3rem;
+  }
+  .footer{
+    margin-top:1rem;
+  }
+}
+
+@media (max-width:800px){
   .congrats {
     width:60%;
     border:3px solid pink;
@@ -170,7 +245,7 @@ background-color:gray;
   #midline{
     font-size:1.8rem;
     letter-spacing: .35rem;
-    line-height:3rem;
+    line-height:2rem;
     color:white;
   }
 
